Update jdt.core to S4_18_0_M1